# CASE-UCO-SDK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  ONTOLOGY_REFERENCE.md  README.md
.cursor/: mcp.json
.cursor/rules/: case-uco-sdk.mdc
.github/: FUNDING.yml  release-footer.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
change_proposals/: README.md  cryptocurrency-address-and-sanctions-designation.md
csharp/CaseUco.Smoke/: CaseUco.Smoke.csproj
csharp/CaseUco.Tests/: CaseGraphTests.cs  (+1 more)
docs/: ECOSYSTEM.md  MAPPING_GUIDE.md  PERFORMANCE_GUIDE.md  RECIPES.md
example_agentmcp_outputs/: cellbrite_samsung_extraction.py  cellebrite_samsung_extraction.jsonld  field_office_custody.jsonld  field_office_custody.py  wifi_capture.jsonld  wifi_capture.pcapng  wifi_capture.py
generator/: pyproject.toml
generator/src/case_uco_generator/: cli.py  explore_cli.py  explorer.py  mapping_guide.py  ontology_parser.py  scaffold.py  schema_model.py
generator/src/case_uco_generator/backends/: base.py  csharp_backend.py  docs_backend.py  java_backend.py  python_backend.py  rust_backend.py
java/: pom.xml
mcp_server/: document_processor.py  document_processor_cli.py  domain_index.py  server.py
rust/: Cargo.toml
rust/src/: graph.rs  lib.rs
rust/src/case/: investigation.rs
rust/src/uco/: action.rs  analysis.rs  configuration.rs  core.rs  identity.rs  location.rs  marking.rs  observable.rs  pattern.rs  role.rs  tool.rs  types.rs  victim.rs
rust/tests/: graph_test.rs
scripts/: sparql_test.py
(+114 files in other folders)
