[package]
name = "case-uco"
version = "0.1.0"
edition = "2021"
description = "Standard library for constructing CASE/UCO ontology graphs"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
